--- a/src/styles/components/_slider.scss
+++ b/src/styles/components/_slider.scss
@@ -2,17 +2,60 @@ section.slider {
   height: calc(100vh - 80px);
 
   .container {
-    width: 300vw;
+    position: relative;
+    justify-content: center;
+    align-items: center;
     display: flex;
+    margin: auto;
+    width: 800px;
     height: 100%;
-
-    img {
+    overflow: hidden;
+    div.slide {
+      position: absolute;
+      z-index: -1;
+      width: 100%;
       height: 100%;
-      width: 100vw;
-      object-fit: cover;
+      // transform: translateX(-800px);
+
+      .img {
+        height: 100%;
+        width: 100%;
+        background-size: cover;
+        background-position: center;
+      }
     }
   }
-  .backward {
+}
+.slider {
+  .control {
     position: absolute;
+    top: 50%;
+    font-size: 4rem;
+    font-weight: 900;
+    color: #fff;
+    cursor: pointer;
+  }
+  .leftArrow {
+    left: 5px;
+  }
+  .rightArrow {
+    right: -2px;
+  }
+  .panel {
+    padding: 0.5rem;
+    border-radius: 5rem;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: relative;
+    top: 18rem;
+
+    .slider-dots {
+      height: 1rem;
+      width: 1rem;
+      display: inline-block;
+      background-color: #fff;
+      cursor: pointer;
+      border-radius: 50%;
+      margin: 0 0.7rem;
+    }
   }
 }
