--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,4 +1,6 @@
 @use "./components/navbar";
+@use "./components/footer";
+@use "./components/slider";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
 
 * {
@@ -7,4 +9,5 @@
   margin: 0;
   text-decoration: none;
   text-transform: capitalize;
+  color: inherit;
 }
