--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -145,6 +145,68 @@ section.slider .container div.slide .img {
   transform: scale(1.5);
 }
 
+.featured-product {
+  margin: 100px 50px;
+  width: 80vw;
+}
+.featured-product .cards {
+  display: flex;
+  gap: 50px;
+}
+
+.card {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.card span {
+  position: absolute;
+  font-weight: bold;
+  top: 5px;
+  left: 5px;
+  background-color: #fff;
+  color: rgb(30, 186, 186);
+  padding: 0.3rem;
+  z-index: 5;
+}
+.card .image {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  position: relative;
+}
+.card .image:hover .second-img {
+  z-index: 2;
+}
+.card .image img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card .image .cover-img {
+  z-index: 1;
+}
+.card h2 {
+  height: 40px;
+  font-size: 16px;
+  font-weight: 400;
+}
+.card .prices {
+  display: flex;
+  gap: 30px;
+}
+.card .prices h3 {
+  font-size: 17px;
+}
+.card .prices h3:first-child {
+  font-size: 14px;
+  color: rgb(138, 134, 134);
+  text-decoration: line-through;
+}
+
 * {
   font-family: "Roboto Mono", monospace;
   box-sizing: border-box;
