--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,8 @@
 @use "./components/navbar";
 @use "./components/footer";
 @use "./components/slider";
+@use "./components/featuredProduct";
+@use "./components/card";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
 
 * {
