--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -154,6 +154,62 @@ section.slider .container div.slide .img {
   gap: 50px;
 }
 
+:root {
+  --neon-blue: #0061ffff;
+  --electric-blue: #60efffff;
+}
+
+.categories {
+  display: flex;
+  margin: 10px;
+  height: 80vh;
+  gap: 10px;
+}
+.categories .col {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.categories .col-1 {
+  flex: 2;
+}
+.categories .row {
+  display: flex;
+  flex: 1;
+  gap: 10px;
+  overflow: hidden;
+  position: relative;
+}
+.categories .row button {
+  border: 0.1rem solid var(--neon-blue);
+  background-color: rgb(6, 5, 5);
+  color: #fff;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  transition: all 0.3s linear;
+  position: absolute;
+  margin: auto;
+  min-width: 30%;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 50px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.categories .row button:hover {
+  background: rgba(255, 165, 0, 0.2);
+  color: var(--orange);
+}
+.categories .row img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .card {
   width: 300px;
   display: flex;
