--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,7 @@
 @use "./components/footer";
 @use "./components/slider";
 @use "./components/featuredProduct";
+@use "./components//categories";
 @use "./components/card";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
 
