--- a/src/styles/components/_featuredProduct.scss
+++ b/src/styles/components/_featuredProduct.scss
@@ -1,9 +1,4 @@
 .featured-product {
-  margin: 100px 50px;
+  margin: auto;
   width: 80vw;
-  .cards {
-    display: flex;
-
-    gap: 50px;
-  }
 }
