--- a/src/styles/_template.scss
+++ b/src/styles/_template.scss
@@ -16,3 +16,11 @@
     color: var(--orange);
   }
 }
+
+@mixin black-submit-button {
+  padding: 10px;
+  color: #fff;
+  background-color: #333;
+  border-radius: 0 5px 5px 0;
+  border: none;
+}
