--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,8 @@
 @use "./components/featuredProduct";
 @use "./components//categories";
 @use "./components/card";
+@use "./components/contact";
+@use "./components/products";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
 
 * {
