--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
+header {
+  position: relative;
+}
 header div.wrapper {
   display: flex;
   justify-content: space-between;
@@ -302,6 +305,67 @@ section.slider .container div.slide .img {
   border: none;
 }
 
+.cart {
+  position: absolute;
+  right: 20px;
+  top: 100%;
+  z-index: 100;
+  background-color: #fff;
+  padding: 20px;
+}
+.cart .cart-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 1rem;
+}
+.cart .cart-item img {
+  width: 80px;
+  height: 100px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.cart .cart-item .details h1 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+.cart .cart-item .details p {
+  color: gray;
+  margin-bottom: 0.5rem;
+  font-size: 0.5rem;
+}
+.cart .cart-item .details .price {
+  color: var(--neon-blue);
+  font-weight: bold;
+}
+.cart .delete {
+  color: red;
+  cursor: pointer;
+}
+.cart .total {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+.cart button {
+  width: 80%;
+  padding: 10px;
+  background-color: var(--neon-blue);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: bold;
+  gap: 20px;
+}
+.cart .reset {
+  font-size: 0.25rem;
+  color: red;
+  cursor: pointer;
+}
+
 .products {
   padding: 1rem;
   display: flex;
@@ -330,6 +394,101 @@ section.slider .container div.slide .img {
   -o-object-fit: cover;
      object-fit: cover;
   margin-bottom: 1rem;
+}
+
+.product {
+  padding: 1.5rem;
+  display: flex;
+  gap: 50px;
+}
+.product .left {
+  flex: 1;
+  display: flex;
+  gap: 1rem;
+}
+.product .left .gallery {
+  flex: 1;
+}
+.product .left .gallery img {
+  width: 100%;
+  height: 150px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 1rem;
+  cursor: pointer;
+}
+.product .left .display-image {
+  flex: 4;
+}
+.product .left .display-image img {
+  width: 100%;
+  height: 70dvh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.product .right {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.product .right .price {
+  font-size: 1.5rem;
+  color: var(--neon-blue);
+  font-weight: bold;
+}
+.product .right p {
+  font-size: 0.5rem;
+  font-weight: lighter;
+  text-align: justify;
+}
+.product .right .quantity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.product .right .quantity button {
+  width: 30px;
+  height: 30px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  border: none;
+}
+.product .right .add {
+  width: 30%;
+  padding: 10px;
+  background-color: var(--neon-blue);
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  font-weight: bold;
+  gap: 20px;
+}
+.product .right .functions {
+  display: flex;
+  gap: 0.5rem;
+}
+.product .right .functions .item {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
+  color: var(--neon-blue);
+  font-size: 0.5rem;
+  border: none;
+}
+.product .right .info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: gray;
+  font-size: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 * {
