--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,6 +1,8 @@
 header {
   position: relative;
+
   div.wrapper {
+    height: 10dvw;
     display: flex;
     justify-content: space-between;
     padding: 0 0.5rem;
