--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,8 +6,8 @@
 @use "./components/card";
 @use "./components/contact";
 @use "./components/cart";
-@use "./components/products";
-@use "./components/product";
+@use "./pages/products";
+@use "./pages/product";
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
 
 * {
@@ -17,4 +17,5 @@
   text-decoration: none;
   text-transform: capitalize;
   color: inherit;
+  scroll-behavior: smooth;
 }
