--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -25,8 +25,9 @@
     z-index: 5;
   }
   .image {
-    width: 100%;
-    height: 400px;
+    // width: 100%;
+    // height: 400px;
+    aspect-ratio: 1/1.44;
     overflow: hidden;
     position: relative;
     &:hover {
@@ -37,7 +38,7 @@
     img {
       position: absolute;
       width: 100%;
-      height: 100%;
+      min-height: 100%;
       object-fit: cover;
     }
     .cover-img {
@@ -67,8 +68,6 @@
 @media screen and (max-width: 972px) {
   .cards {
     grid-template-columns: repeat(2, minmax(4.4rem, 1.5fr));
-    .image {
-    }
   }
 }
 
