--- a/src/styles/components/_cart.scss
+++ b/src/styles/components/_cart.scss
@@ -5,7 +5,7 @@
   right: 20px;
   top: 100%;
   z-index: 100;
-  background-color: #fff;
+  background-color: hsl(0, 0%, 100%);
   padding: 20px;
 
   .cart-item {
@@ -13,6 +13,7 @@
     align-items: center;
     gap: 20px;
     margin-bottom: 1rem;
+
     img {
       width: 80px;
       height: 100px;
