--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,6 +5,7 @@
 @use "./components//categories";
 @use "./components/card";
 @use "./components/contact";
+@use "./components/message";
 @use "./components/cart";
 @use "./pages/products";
 @use "./pages/product";
