--- a/src/styles/components/_cart.scss
+++ b/src/styles/components/_cart.scss
@@ -2,11 +2,16 @@
 
 .cart {
   position: absolute;
+  min-height: 100px;
   right: 20px;
   top: 100%;
   z-index: 100;
   background-color: hsl(0, 0%, 100%);
   padding: 20px;
+  border: 0.1px solid var(--neon-blue);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
   .cart-item {
     display: flex;
@@ -37,6 +42,18 @@
           font-weight: bolder;
           font-size: 1.5rem;
         }
+      }
+    }
+  }
+  .message {
+    text-align: center;
+    a {
+      font-size: 0.5rem;
+      text-decoration: underline;
+      color: var(--neon-blue);
+      &:hover {
+        background: rgba(255, 165, 0, 0.2);
+        color: var(--electric-blue);
       }
     }
   }
