--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,47 +1,61 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Roboto+Mono:wght@200;300;400;600;700&display=swap");
-header {
-  position: relative;
-}
-header div.wrapper {
-  height: 10dvw;
+header.wrapper {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: #f0e7e7;
+  box-shadow: rgba(120, 115, 115, 0.1) 0px 4px 12px;
   display: flex;
   justify-content: space-between;
-  padding: 0 0.5rem;
+  padding: 2rem 9%;
 }
-header .item {
-  display: flex;
+header.wrapper .menu-icon {
+  display: none;
+  color: #fff;
+  border: 0.2rem solid;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  font-size: 3rem;
 }
-header .left {
+header.wrapper .left {
   flex-wrap: wrap;
   display: flex;
   gap: 20px;
   align-items: center;
 }
-header .left .location img {
+header.wrapper .left .location img {
   width: 2vw;
 }
-header .center {
-  align-self: center;
+header.wrapper .center {
+  display: flex;
+  flex-wrap: wrap;
 }
-header .center h1 {
-  text-transform: uppercase;
-  font-weight: light;
+header.wrapper .center a {
+  font-size: 1.5rem;
+  margin: 0 1rem;
 }
-header .right {
+header.wrapper .center a:hover {
+  color: var(--electric-blue);
+  border-bottom: 1px solid var(--electric-blue);
+}
+header.wrapper .right {
   display: flex;
   gap: 25px;
   align-items: center;
+  flex-wrap: wrap;
 }
-header .right .icons {
+header.wrapper .right .icons {
   display: flex;
   gap: 15px;
   cursor: pointer;
   color: #777;
 }
-header .right .icons .cartIcon {
+header.wrapper .right .icons .cartIcon {
   position: relative;
 }
-header .right .icons .cartIcon span {
+header.wrapper .right .icons .cartIcon span {
   background-color: #375cd7;
   border-radius: 70%;
   font-size: 12px;
@@ -56,6 +70,34 @@ header .right .icons .cartIcon span {
   align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  header.wrapper svg.menu-icon {
+    display: initial;
+  }
+  header.wrapper .center {
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    right: 0;
+    background-color: #121111;
+    border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
+    padding: 1rem 2rem;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    flex-direction: column;
+  }
+  header.wrapper .center a {
+    text-align: center;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin: 1rem 0;
+    background-color: #fff;
+  }
+  header.wrapper .active {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
 footer {
   margin: 3rem 4rem;
 }
@@ -275,6 +317,78 @@ section.slider .container div.slide .img {
     grid-template-columns: repeat(1, minmax(4.4rem, 1.5fr));
   }
 }
+.login-form-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.login-form-container form {
+  background-color: #fff;
+  padding: 1.5rem 2rem;
+  margin: 2rem;
+  border-radius: 0.5rem;
+  width: 60vw;
+}
+.login-form-container form h3 {
+  font-size: 3rem;
+  color: #444;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 1rem 0;
+}
+.login-form-container form input.box {
+  width: 100%;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+  margin: 0.5rem;
+  border: 0.1rem solid rgb(0, 0, 0);
+  text-transform: none;
+}
+.login-form-container form input.box:focus {
+  border-color: var(--electric-blue);
+}
+.login-form-container form #remember {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 1.5rem 0;
+}
+.login-form-container form label {
+  font-size: 1.5rem;
+}
+.login-form-container form p {
+  font-size: 1rem;
+  color: #666;
+  padding: 0.5rem 0;
+}
+.login-form-container form p a {
+  color: var(--electric-blue);
+}
+.login-form-container form p a:hover {
+  color: #666;
+  text-decoration: underline;
+}
+
+.auth-btn {
+  width: 100%;
+  display: inline-block;
+  margin-top: 1rem;
+  cursor: pointer;
+  border: 0.1rem solid var(--electric-blue);
+  background-color: var(--electric-blue);
+  color: #fff;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  border-radius: 0.5rem;
+  transition: all 0.3s linear;
+}
+.auth-btn:hover {
+  background: rgba(255, 165, 0, 0.2);
+  color: var(--electric-blue);
+}
+
 .contact {
   background-color: #2879fe;
   color: #fff;
@@ -334,11 +448,14 @@ section.message .message-box .logo .error {
 
 .cart {
   position: absolute;
+  min-height: 100px;
   right: 20px;
   top: 100%;
   z-index: 100;
   background-color: hsl(0, 0%, 100%);
   padding: 20px;
+  border: 0.1px solid var(--neon-blue);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 .cart .cart-item {
   display: flex;
@@ -369,6 +486,18 @@ section.message .message-box .logo .error {
   font-weight: bolder;
   font-size: 1.5rem;
 }
+.cart .message {
+  text-align: center;
+}
+.cart .message a {
+  font-size: 0.5rem;
+  text-decoration: underline;
+  color: var(--neon-blue);
+}
+.cart .message a:hover {
+  background: rgba(255, 165, 0, 0.2);
+  color: var(--electric-blue);
+}
 .cart .delete {
   color: red;
   cursor: pointer;
@@ -395,6 +524,80 @@ section.message .message-box .logo .error {
   font-size: 0.25rem;
   color: red;
   cursor: pointer;
+}
+
+.profile {
+  line-height: 2;
+  width: 100%;
+  min-height: 80dvh;
+  padding: 0.5rem;
+}
+.profile .account_title {
+  line-height: 1;
+  color: #000;
+  padding-bottom: 20px;
+  padding: 20px;
+}
+.profile .account_container {
+  border: 1px solid #d8d8d8;
+  padding: 20px;
+  background: #f2f5f8;
+  color: #4c4c4c;
+  line-height: 40px;
+}
+.profile .account_container .infoLabel {
+  min-width: 250px;
+  float: left;
+}
+.profile .account_container .infoContent {
+  text-transform: lowercase;
+}
+.profile .order_container .orders_order {
+  display: flex;
+  flex-direction: row;
+  background-color: #fff;
+  border-bottom: 1px solid #6d6e6e;
+}
+.profile .order_container .orders_order .order_meta {
+  padding: 20px 20px 40px;
+  width: 226px;
+  border-right: 1px solid #dfdfdf;
+}
+.profile .order_container .orders_order .order_meta .order_number-title {
+  color: #6d6e6e;
+  margin-bottom: 5px;
+}
+.profile .order_container .orders_order .order_meta .order_number-content {
+  font-size: 18px;
+  line-height: 1.2;
+  margin-top: -1.8px;
+  margin-bottom: -1.8px;
+}
+.profile .order_container .orders_order .order_meta .order_date {
+  font-size: 12px;
+  color: #6d6e6e;
+  margin: 20px 0;
+}
+.profile .order_container .orders_order .order-content {
+  flex: 1;
+  padding: 0.5rem 0.1rem;
+}
+.profile .order_container .orders_order .order-content .order_item {
+  display: flex;
+  padding: 20px;
+}
+.profile .order_container .orders_order .order-content .order_item:nth-child(even) {
+  border-top: 1px ridge #6d6e6e;
+}
+.profile .order_container .orders_order .order-content .order_item .orders_item-meta {
+  padding-left: 1rem;
+}
+.profile .order_container .orders_order .order-content .order_item .orders_item-meta .order_item-title {
+  margin: 12px 0;
+}
+
+.profile span {
+  font-weight: bold;
 }
 
 .products {
@@ -576,4 +779,17 @@ nav.product-info-nav a {
   text-transform: capitalize;
   color: inherit;
   scroll-behavior: smooth;
+  transition: all 0.2s linear;
+}
+
+html {
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: 6rem;
+}
+
+li,
+ul {
+  list-style-type: none;
+  display: block;
 }/*# sourceMappingURL=style.css.map */
