--- a/src/styles/pages/_product.scss
+++ b/src/styles/pages/_product.scss
@@ -12,7 +12,7 @@
       flex: 1;
       img {
         width: 100%;
-        height: 150px;
+        // height: 100%;
         object-fit: cover;
         margin-bottom: 1rem;
         cursor: pointer;
@@ -22,7 +22,6 @@
       flex: 4;
       img {
         width: 100%;
-        height: 70dvh;
         object-fit: cover;
       }
     }
