--- a/src/styles/pages/_product.scss
+++ b/src/styles/pages/_product.scss
@@ -30,7 +30,24 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+
     gap: 1rem;
+    .product-info-nav-info {
+      br {
+        border: solid 1rem black;
+      }
+      padding: 1.5rem;
+      h1 {
+        font-size: 2.5rem;
+      }
+      span {
+        line-height: 2;
+        display: block;
+        font-size: 1.5rem;
+        color: #747577;
+        padding-bottom: 0.5rem;
+      }
+    }
     .price {
       font-size: 1.5rem;
       color: var(--neon-blue);
@@ -97,27 +114,25 @@ nav.product-info-nav {
     color: #4d4d4d;
     font-weight: bolder;
     padding: 5px 0px;
-    font-size: 1.25rem;
+    font-size: 1.7rem;
   }
 }
 
-.product-info-nav-info {
-  h4 {
-    padding-bottom: 1rem;
-  }
-}
 //delivery
 .product {
   .right {
     .product-info-nav-delivery {
+      padding: 1rem;
       border: 2px solid #e5e7eb;
       display: flex;
       flex-direction: column;
+      font-size: 2rem;
       height: 200px;
       div {
         display: flex;
         flex: 1;
         justify-content: center;
+        font-size: 70%;
         align-items: center;
         border-bottom: 2px solid #e5e7eb;
         &:last-of-type {
@@ -130,7 +145,7 @@ nav.product-info-nav {
         }
         p {
           color: #747577;
-          font-size: 1rem;
+          font-size: inherit;
           font-weight: 500;
           b {
             color: auto;
