--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -686,6 +686,22 @@ section.message .message-box .logo .error {
   flex-direction: column;
   gap: 1rem;
 }
+.product .right .product-info-nav-info {
+  padding: 1.5rem;
+}
+.product .right .product-info-nav-info br {
+  border: solid 1rem black;
+}
+.product .right .product-info-nav-info h1 {
+  font-size: 2.5rem;
+}
+.product .right .product-info-nav-info span {
+  line-height: 2;
+  display: block;
+  font-size: 1.5rem;
+  color: #747577;
+  padding-bottom: 0.5rem;
+}
 .product .right .price {
   font-size: 1.5rem;
   color: var(--neon-blue);
@@ -754,23 +770,22 @@ nav.product-info-nav a {
   color: #4d4d4d;
   font-weight: bolder;
   padding: 5px 0px;
-  font-size: 1.25rem;
-}
-
-.product-info-nav-info h4 {
-  padding-bottom: 1rem;
+  font-size: 1.7rem;
 }
 
 .product .right .product-info-nav-delivery {
+  padding: 1rem;
   border: 2px solid #e5e7eb;
   display: flex;
   flex-direction: column;
+  font-size: 2rem;
   height: 200px;
 }
 .product .right .product-info-nav-delivery div {
   display: flex;
   flex: 1;
   justify-content: center;
+  font-size: 70%;
   align-items: center;
   border-bottom: 2px solid #e5e7eb;
 }
@@ -784,7 +799,7 @@ nav.product-info-nav a {
 }
 .product .right .product-info-nav-delivery div p {
   color: #747577;
-  font-size: 1rem;
+  font-size: inherit;
   font-weight: 500;
 }
 .product .right .product-info-nav-delivery div p b {
